[package]
name = "webview-x"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.7.3"
webview2 = "0.1.3"
urlencoding = "2.1.0"
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef", "wingdi", "shellapi", "libloaderapi", "commctrl", "basetsd"] }