[package]
name = "webview-x"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyfiledialogs = "3.3"
web-view = {version="0.7.3"}
once_cell = "1.3.1"
webview2 = "0.1.3"
webview2-sys = "0.1.1"
urlencoding = "2.1.0"
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef", "wingdi", "shellapi", "libloaderapi", "commctrl", "basetsd", "winbase"] }